--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon src/server.js"
+    "server": "nodemon src/server.js -e js,html,hbs,css"
   },
   "keywords": [],
   "author": "",
